feat: Add players skip mechanism (#267)
